--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,8 +6,6 @@ page {
   background-color: var(--color-fill-2);
   box-sizing: border-box;
   color: var(--color-text-1);
-  /* stylelint-disable-next-line max-line-length */
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'PingFang SC', 'Hiragino Sans GB', 'noto sans', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   line-height: 1.5;
